# open_deep_research

./: .env.example  CLAUDE.md  Makefile  README.md  deep-investment-thinker.skill  install.sh  pyproject.toml  uninstall.sh
docs/plans/: 2026-02-14-deep-thinking-engine-design.md
openspec/: project.md
openspec/changes/integrate-openrouter/: design.md  proposal.md  tasks.md
openspec/changes/integrate-openrouter/specs/logic/: spec.md
skill/: SKILL.md
skill/references/: content-creation-anchors.md  game-dev-anchors.md  investment-anchors.md  learning-anchors.md  research-anchors.md  tech-evaluation-anchors.md
src/deep_thinking/: __init__.py  cli.py  config.py  session.py  state.py  workflow.py
src/deep_thinking/agents/: __init__.py  adversarial.py  anchor.py  fact_checker.py
src/deep_thinking/domains/: __init__.py  base.py  content_creation.py  game_dev.py  investment.py  learning.py  research.py  tech_eval.py
src/deepsearch/: __init__.py  __main__.py  cli.py  config.py  state.py  storage.py  workflow.py
src/deepsearch/agents/: __init__.py  planner.py  reflector.py  researcher.py  verifier.py  writer.py
src/deepsearch/output/: __init__.py  formatters.py  report.py
src/deepsearch/search/: __init__.py  base.py  openrouter.py  tavily.py
